fixed spacing issue by isolating .project img

--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@
     padding: 0 18% 0 18%;
   }
   
-  section img {
+  .projects img {
     width: 50%;
     margin: auto;
   }
